--- a/atraccion.html
+++ b/atraccion.html
@@ -41,25 +41,16 @@
     </nav>
     <br><br><br><br>
     
-  <!-- <div class="carousel-inner">
-        <img src="img/1.jpg" alt="10" style="height:36.1rem ; width: 78.95rem;" >
-        <div class="carousel-caption d-none d-md-block">
-          <h3 style="color: aliceblue;">Lo mejor para visitar</h3>
-          <p>Experiencias sobresalientes dentro de regiones Tzeltales.</p>
-        </div>
-
-    </div>
-<br> -->
 
 <ul class="nav nav-tabs">
   <li class="nav-item">
-    <a class="nav-link" href="Turismo.html" tabindex="-1" aria-disabled="true" style="color: rgb(255, 255, 255);">Hoteles</a>
+    <a class="nav-link" href="turismo.html" tabindex="-1" aria-disabled="true" style="color: rgb(255, 255, 255);">Hoteles</a>
   </li>
   <li class="nav-item">
     <a class="nav-link active" aria-current="page" style="background-color: #5f572d; color: #ffffff;">Atracciones</a>
   </li>
   <li class="nav-item">
-    <a class="nav-link" href="Epocas.html" tabindex="-1" aria-disabled="true" style="color: rgb(255, 255, 255);">Épocas</a>
+    <a class="nav-link" href="epocas.html" tabindex="-1" aria-disabled="true" style="color: rgb(255, 255, 255);">Épocas</a>
   </li>
 </ul>
 
