--- a/turismo.html
+++ b/turismo.html
@@ -61,10 +61,10 @@
     <a class="nav-link active" style="color: rgb(255, 255, 255); background-color: #5f572d;" aria-current="page" >Hoteles</a>
   </li>
   <li class="nav-item">
-    <a class="nav-link" href="Atraccion.html" tabindex="-1" aria-disabled="true" style="color: rgb(255, 255, 255);">Atracciones</a>
+    <a class="nav-link" href="atraccion.html" tabindex="-1" aria-disabled="true" style="color: rgb(255, 255, 255);">Atracciones</a>
   </li>
   <li class="nav-item">
-    <a class="nav-link" href="Epocas.html" tabindex="-1" aria-disabled="true" style="color: rgb(255, 255, 255);"> Épocas</a>
+    <a class="nav-link" href="epocas.html" tabindex="-1" aria-disabled="true" style="color: rgb(255, 255, 255);"> Épocas</a>
   </li>
 </ul>
 
