--- a/epocas.html
+++ b/epocas.html
@@ -53,10 +53,10 @@
 
 <ul class="nav nav-tabs">
   <li class="nav-item">
-    <a class="nav-link" href="Turismo.html" tabindex="-1" aria-disabled="true" style="color: rgb(255, 255, 255);">Hoteles</a>
+    <a class="nav-link" href="turismo.html" tabindex="-1" aria-disabled="true" style="color: rgb(255, 255, 255);">Hoteles</a>
   </li>
   <li class="nav-item">
-    <a class="nav-link" href="Atraccion.html" tabindex="-1" aria-disabled="true" style="color: rgb(255, 255, 255);">Atracciones</a>
+    <a class="nav-link" href="atraccion.html" tabindex="-1" aria-disabled="true" style="color: rgb(255, 255, 255);">Atracciones</a>
   </li>
   <li class="nav-item">
     <a class="nav-link active" aria-current="page" style="background-color: #5f572d; color: #ffffff;">Épocas</a>
